新增動態牆樣式

--- a/addPost.html
+++ b/addPost.html
@@ -42,17 +42,17 @@
       </div>
       <div class="col-lg-4">
         <div class="bg-white p-4 sidebar border border-2 border-dark position-relative">
-          <a href="addPost.html" class="add-post-btn link-white btn btn-secondary w-100 mb-3 py-2">
+          <a href="addPost.html" class="add-post-btn link-white btn btn-primary w-100 mb-3 py-2">
             張貼動態
           </a>
           <a class="text-decoration-none link-dark d-flex align-items-center mb-3" href="#">
-            <img class="avatar rounded-circle object-fit-cover me-2" src="https://images.unsplash.com/photo-1649119947831-f096bcf4ee64?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDMzfDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60" alt="avatar"/>
+            <img class="avatar rounded-circle object-fit-cover me-2" src="./img/user@2x.png" alt="avatar"/>
             <h3 class="fs-6 mb-0">邊緣小杰</h3></a>
             <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-            <div class="icon rounded-circle bi bi-people border border-secondary fs-3 avatar text-center me-2"></div>
+            <div class="icon rounded-circle bi bi-people fs-3 avatar text-center me-3"></div>
             <h3 class="fs-6 mb-0">追蹤名單</h3></a>
             <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-              <div class="icon rounded-circle bi bi-hand-thumbs-up border border-secondary fs-3 avatar text-center me-2"></div>
+              <div class="icon rounded-circle bi bi-hand-thumbs-up fs-3 avatar text-center me-3"></div>
               <h3 class="fs-6 mb-0">我按讚的文章</h3>
             </a>
         </div>
