--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </a>
     </div>
   </nav>
-  <div class="container posts">
+  <div class="container">
     <div class="row mt-5">
       <div class="col-lg-8">
         <div class="row">
@@ -29,13 +29,13 @@
           <div class="col-8">
             <div class="input-group mb-3">
               <input class="search-text form-control rounded-0 border-dark border-2 border-end-0" type="search" placeholder="搜尋貼文" aria-label="Username" aria-describedby="basic-addon1"/>
-              <button type="button" class="search-posts input-group-text bi bi-search text-decoration-none rounded-0 btn-secondary text-white fw-bold fs-5 border-0 shadow-none" id="basic-addon1"></button>
+              <button type="button" class="search-posts input-group-text bi bi-search text-decoration-none rounded-0 btn-primary text-white fw-bold fs-5 border-0 shadow-none" id="basic-addon1"></button>
             </div>
           </div>
         </div>
         <ul class="posts-list list-unstyled ps-0">
           <li class="card text-muted rounded">
-            <div class="card-header py-4">
+            <div class="card-header py-4 bg-white border-bottom-0">
               
             </div>
             <div class="card-body">
@@ -46,15 +46,15 @@
       </div>
       <div class="col-lg-4">
         <div class="bg-white p-4 sidebar position-relative border border-2 border-dark">
-          <a href="addPost.html" class="add-post-btn link-white btn btn-secondary w-100 mb-3 py-2" type="button">張貼動態</a>
+          <a href="addPost.html" class="add-post-btn link-white btn btn-primary w-100 mb-3 py-2" type="button">張貼動態</a>
           <a class="text-decoration-none link-dark d-flex align-items-center mb-3" href="#">
-            <img class="avatar rounded-circle object-fit-cover me-2" src="https://images.unsplash.com/photo-1649119947831-f096bcf4ee64?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDMzfDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60" alt="avatar"/>
+            <img class="avatar rounded-circle object-fit-cover me-2" src="./img/user@2x.png" alt="avatar"/>
             <h3 class="fs-6 mb-0">邊緣小杰</h3></a>
-            <a class="icon text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-            <div class="rounded-circle bi bi-people border border-secondary fs-3 avatar text-center me-2"></div>
+            <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
+            <div class="icon rounded-circle bi bi-bell fs-3 avatar text-center me-3"></div>
             <h3 class="fs-6 mb-0">追蹤名單</h3></a>
-            <a class="icon text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-              <div class="rounded-circle bi bi-hand-thumbs-up border border-secondary fs-3 avatar text-center me-2"></div>
+            <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
+              <div class="icon rounded-circle bi bi-hand-thumbs-up fs-3 avatar text-center me-3"></div>
               <h3 class="fs-6 mb-0">我按讚的文章</h3></a>
         </div>
       </div>
