--- a/index.html
+++ b/index.html
@@ -47,15 +47,26 @@
       <div class="col-lg-4">
         <div class="bg-white p-4 sidebar position-relative border border-2 border-dark">
           <a href="addPost.html" class="add-post-btn link-white btn btn-primary w-100 mb-3 py-2" type="button">張貼動態</a>
-          <a class="text-decoration-none link-dark d-flex align-items-center mb-3" href="#">
-            <img class="avatar rounded-circle object-fit-cover me-2" src="./img/user@2x.png" alt="avatar"/>
-            <h3 class="fs-6 mb-0">邊緣小杰</h3></a>
-            <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-            <div class="icon rounded-circle bi bi-bell fs-3 avatar text-center me-3"></div>
-            <h3 class="fs-6 mb-0">追蹤名單</h3></a>
-            <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
-              <div class="icon rounded-circle bi bi-hand-thumbs-up fs-3 avatar text-center me-3"></div>
-              <h3 class="fs-6 mb-0">我按讚的文章</h3></a>
+          <ul class="list-unstyled ps-0">
+            <li>
+              <a class="text-decoration-none link-dark d-flex align-items-center mb-3" href="#">
+                <img class="user avatar rounded-circle object-fit-cover me-3" src="./img/user@2x.png" alt="avatar"/>
+                <h3 class="fs-6 mb-0">邊緣小杰</h3>
+              </a>
+            </li>
+            <li>
+              <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
+                <div class="icon rounded-circle bi bi-people fs-3 avatar text-center me-3"></div>
+                <h3 class="fs-6 mb-0">追蹤名單</h3>
+              </a>
+            </li>
+            <li>
+              <a class="text-decoration-none link-dark d-flex mb-3 align-items-center" href="#">
+                  <div class="icon rounded-circle bi bi-hand-thumbs-up fs-3 avatar text-center me-3"></div>
+                  <h3 class="fs-6 mb-0">我按讚的文章</h3>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
