新增頁面及功能

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container-md">
       <a class="navbar-brand" href="index.html">MetaWall</a>
-      <a class="navbar-link d-flex text-decoration-none link-dark" href="#">
-        <img class="rounded-circle avatar object-fit-cover border-dark me-2" src="https://images.unsplash.com/photo-1648410775749-2a737a312218?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1470&amp;q=80" alt="penguin"/><span class="user-name border-bottom border-dark border-2">Member</span>
-      </a>
+      <div class="navbar-item position-relative text-nowrap" href="#">
+        <a href="#" class="navbar-link d-flex text-decoration-none link-dark py-2 px-4 position-relative text-nowrap">
+          <img class="rounded-circle avatar object-fit-cover border-dark me-2" src="https://images.unsplash.com/photo-1648410775749-2a737a312218?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1470&amp;q=80" alt="penguin"/>
+          <span class="user-name border-bottom border-dark border-2">Member</span>
+        </a>
+       
+        <ul class="list-group list-unstyled ps-0 border-dark text-center">
+          <li aria-current="true">
+            <a href="index.html" class="list-group-item list-group-item-action active border-bottom-0">
+              我的貼文牆
+            </a>
+          </li>
+          <li>
+            <a href="profile.html" class="list-group-item list-group-item-action border-bottom-0">
+              修改個人資料
+            </a>
+          </li>
+          <li>
+            <a href="login.html" class="list-group-item list-group-item-action">
+              登出
+            </a>
+          </li>
+        </ul>
+      </div>
+      
     </div>
   </nav>
   <div class="container">
